[gd_scene load_steps=5 format=2]

[ext_resource path="res://Resources/Fonts/Dynamic_Fonts_Data/legend_dynamicfontdata.tres" type="DynamicFontData" id=1]
[ext_resource path="res://Resources/Themes/main_theme.tres" type="Theme" id=2]
[ext_resource path="res://Scripts/GUI/options_menu.gd" type="Script" id=3]

[sub_resource type="DynamicFont" id=1]
size = 60
font_data = ExtResource( 1 )

[node name="OptionsMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TitleLabel" type="Label" parent="ColorRect"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -94.0
margin_top = 40.0
margin_right = 96.0
margin_bottom = 110.0
custom_fonts/font = SubResource( 1 )
text = "OPTIONS"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="VBoxContainer" type="VBoxContainer" parent="ColorRect"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -525.5
margin_top = -312.0
margin_right = 525.5
margin_bottom = 312.0
custom_constants/separation = 30
alignment = 1
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="BackButton" type="Button" parent="ColorRect/VBoxContainer"]
margin_top = 288.0
margin_right = 1051.0
margin_bottom = 335.0
focus_neighbour_left = NodePath(".")
focus_neighbour_top = NodePath(".")
focus_neighbour_right = NodePath(".")
focus_neighbour_bottom = NodePath(".")
text = "back"

[node name="MusicContainer" type="HBoxContainer" parent="."]
margin_right = 525.0
margin_bottom = 126.0
custom_constants/separation = 30
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MusicLabel" type="Label" parent="MusicContainer"]
margin_top = 42.0
margin_right = 409.0
margin_bottom = 83.0
text = "music master sound effects"

[node name="MusicHSlider" type="HSlider" parent="MusicContainer"]
margin_left = 439.0
margin_right = 525.0
margin_bottom = 126.0
size_flags_horizontal = 3
size_flags_vertical = 3

[connection signal="visibility_changed" from="." to="." method="_on_OptionsMenu_visibility_changed"]
[connection signal="pressed" from="ColorRect/VBoxContainer/BackButton" to="." method="_on_BackButton_pressed"]
